<resources>
    <string name="app_name">Guide For Battlegrounds PUBG</string>

    <string name="noNetworkFound">You\'re not connected to the Internet. Please connect and retry. </string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_ok">OK</string>
    <string name="ad_attribution">Ad</string>
    <string name="msg_NO_INTERNET_RESPOND">Please connect your internet connection</string>
    <string name="msg_please_wait">Please wait …</string>
    <string name="msg_server_error">Something went wrong please try again</string>
    <string name="msg_press_back_twice">Double tab to back</string>
    <string name="hi">Hi</string>
    <string name="splash_namee">"Daily Free Diamonds \n- Fire Guide 2020 "</string>
    <string name="bonanzo">Bonanza Labs</string>
    <string name="getstart">Get Start</string>
    <string name="no_inter">No Internet Connection!</string>
    <string name="please_check">Please check your internet connection \nand try again.</string>
    <string name="Dashboar">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_compare">Compare</string>
    <string name="title_tips">Tips</string>
    <string name="title_maps">Maps</string>
    <string name="rateus">Rate us</string>
    <string name="share">Share</string>
    <string name="Watchvideo">Watch Video</string>
    <string name="battlegruondmobilequide">BETTALFROUND MOBILE GUIDE</string>
    <string name="weapon">WEAPON</string>
    <string name="Attachment">ATTACHMENT</string>
    <string name="Ammos">AMMOS</string>
    <string name="equipments">EQUIPMENTS</string>
    <string name="vehicle">VEHICLES</string>
    <string name="consumables">CONSUMABLES</string>
    <string name="guide">GUIDE FOR BETTALGROUND MOBILE INDIA</string>
    <string name="tips_detail">choose the correct landing pointt hoose the correct landing pointtchoo  the correct landing pointtchoosethe correct landing pointtchoos the correct landing pointtchoose the correct landing pointt hoose the correct landi g choose the correct landing pointt</string>
    <string name="this_page">This page currently loacked watch a video to unlock it.</string>
    <string name="snipers">SNIPERS</string>
    <string name="muzzlemode">MUZZLE MODE</string>
    <string name="damage">DAMAGE</string>
    <string name="awm">AWM</string>
    <string name="m24">M24</string>
    <string name="kar98k">Kar98k</string>
    <string name="win94">Win94</string>
    <string name="dmr">DMR</string>
    <string name="mk14">MK14</string>
    <string name="slr">SLR</string>
    <string name="sks">SKS</string>
    <string name="qbu">QBU</string>
    <string name="mini14">Mini14</string>
    <string name="vss">VSS</string>
    <string name="lmg">LMG</string>
    <string name="m249">M249</string>
    <string name="dp28">DP-28</string>
    <string name="ar">AR</string>
    <string name="groza">Groza</string>
    <string name="akm">AKM</string>
    <string name="mk47">Mk47 Mutant</string>
    <string name="berylm762">Beryl M762</string>
    <string name="m416">M416</string>
    <string name="scarl">SCAR-L</string>
    <string name="auga3">Aug A3</string>
    <string name="qbz95">QBZ95</string>
    <string name="m16a4">M16A4</string>
    <string name="smg">SMG</string>
    <string name="tommy">Tommy Gun</string>
    <string name="ump9">Ump9</string>
    <string name="pp19">PP-19 Bizon</string>
    <string name="vector">Vector</string>
    <string name="mp5k">MP5K</string>
    <string name="microuzi">Micro uzi</string>
    <string name="shotguns">SHOTGUNS</string>
    <string name="s12k">S12K</string>
    <string name="s686">S686</string>
    <string name="s1897">S1897</string>
    <string name="sawedoff">Sawed-off</string>
    <string name="handguns">HANDGUNS</string>
    <string name="fliaregun">Fliare Gun</string>
    <string name="skorpion">Skorpion</string>
    <string name="p18c">P18C</string>
    <string name="p92">P92</string>
    <string name="p1911">P1911</string>
    <string name="r1895">R1895</string>
    <string name="r45">R45</string>
    <string name="bows">BOW</string>
    <string name="crossbow">Cross-bow</string>
    <string name="melle">MELEE</string>
    <string name="pan">Pan</string>
    <string name="crowbar">Crowbar</string>
    <string name="machete">Machete</string>
    <string name="sickle">Sickle</string>
    <string name="throwabiles">THROWABILES</string>
    <string name="frage">Frage Grenade</string>
    <string name="molotive">Molotove Cocktail</string>
    <string name="smoke">Smoke Grenade</string>
    <string name="stun">Stun Grenade</string>
    <string name="gauge12">12 Gauge</string>
    <string name="mm556">5.56 mm</string>
    <string name="mm762">7.62 mm</string>
    <string name="mm9">9 mm</string>
    <string name="acp45">.45 ACP</string>
    <string name="magnum300">300 Magnum</string>
    <string name="flare">Flare</string>
    <string name="helmetl1">Motorcycle Helmet Level 1</string>
    <string name="helmetl2">Motorcycle Helmet Level 2</string>
    <string name="helmetl3">Motorcycle Helmet Level 3</string>
    <string name="vestl1">Police Vest Level 1</string>
    <string name="vestl2">Police Vest Level 2</string>
    <string name="vestl3">Police Vest Level 3</string>
    <string name="backpackl1">Backpack Level 1</string>
    <string name="backpackl2">Backpack Level 2</string>
    <string name="backpackl3">Backpack Level 3</string>
    <string name="energy">Energy Drink</string>
    <string name="healthkit">Health Kit</string>
    <string name="Bandage">Bandages</string>
    <string name="gastank">Gas Tank</string>
    <string name="medkit">Med Kit</string>
    <string name="pankiller">PainKiller</string>
    <string name="syringe">Adrenaline Syringe</string>
    <string name="vehicels">VEHICLES</string>
    <string name="buggy">BUGGY</string>
    <string name="pickup">PICKUP</string>
    <string name="motorcycle">MOTORCYCLE</string>
    <string name="minibus">MINI BUS</string>
    <string name="dacia1300">DACIA 1300</string>
    <string name="tukshai">TUKSHAI</string>
    <string name="uazclosed">UAZ CLOSED TOP</string>
    <string name="scooter">SCOOTER</string>
    <string name="mirado">MIRADO</string>
    <string name="motorcyclesidecar">MOTORCYCLE W SIDECAR</string>
    <string name="aquarai">AQUARAII</string>
    <string name="uazopen">UAZ OPEN TOP</string>
    <string name="pc117">PC-117</string>
    <string name="muzzle">MUZZLE MODE</string>
    <string name="chcoke">Chcoke (SG)</string>
    <string name="compensatorar">Compensator (AR,DMR,S12K)</string>
    <string name="compensatorsr">Compensator (DMR,SR)</string>
    <string name="compensatorsmg">Compensator (SMG)</string>
    <string name="duckbill">Duckbill (SG)</string>
    <string name="flashhiderar">Flash Hider (AR,DMR,S12K)</string>
    <string name="flashhidersr">Flash Hider (DMR,SR)</string>
    <string name="flashhidersmg">Flash Hider (SMG)</string>
    <string name="suppressorar">Suppressor (AR,DMR,S12K)</string>
    <string name="suppressorsr">Suppressor (DMR,SR)</string>
    <string name="suppressorhandguns">Suppressor (Handguns)</string>
    <string name="suppressorsmg">Suppressor (SMG)</string>
    <string name="lowerrails">LOWER RAILS</string>
    <string name="angledforegrip">Angled Foregrip (AR, DMR, SMG)</string>
    <string name="halfgrip">Half Grip</string>
    <string name="quiver">Quiver for Crossbow</string>
    <string name="vertical">Vertical Foregrip (AR, SMG DMR)</string>
    <string name="thumbgrip">Thumb Grip</string>
    <string name="lightgrip">Light Grip</string>
    <string name="scopes">SCOPES</string>
    <string name="scop8x">8x CQBSS Scope</string>
    <string name="scop6x">6x Scope</string>
    <string name="scop4x">4x ACOG Scope</string>
    <string name="scop3x">3x Backlit Scope</string>
    <string name="scop2x">2x Aimpoint Scope</string>
    <string name="reddot">Red Dot Sight</string>
    <string name="holographic">Holographic Sight</string>
    <string name="magazins">MAGAZINES</string>
    <string name="quickdrawmagar">Quickdraw Mag (AR, DMR, S12K)</string>
    <string name="quickdrawmagsr">Quickdraw Mag (DMR, SR)</string>
    <string name="quickdrawmaghandgun">Quickdraw Mag (Handgun)</string>
    <string name="quickdrawmagsmg">Quickdraw Mag (SMG)</string>
    <string name="quickdrawmagvss">Quickdraw Mag (VSS)</string>
    <string name="exquickdrawmagar">Extended Quickdraw Mag (AR, DMR, S12K)</string>
    <string name="exquickdrawmagsr">Extended Quickdraw Mag (DMR, SR)</string>
    <string name="exquickdrawmaghandgun">Extended Quickdraw Mag (Handgun)</string>
    <string name="exquickdrawmagsmg">Extended Quickdraw Mag (SMG)</string>
    <string name="exquickmagddmr">Extended Mag (SR, DMR, S12K)</string>
    <string name="exquickmagdsr">Extended Mag (DMR, SR)</string>
    <string name="exquickmagdsmg">Extended Mag (SMG)</string>
    <string name="exquickmaghand">Extended Mag (Handgun)</string>
    <string name="stocks">STOCKS</string>
    <string name="bullets1897">Bullet Loops for S1897, S686</string>
    <string name="bulletsnipers">Bullet Loops for Snipers</string>
    <string name="cheekpad">Cheek Pad (DMR,SR)</string>
    <string name="stockmicro">Stock for Micro UZI</string>
    <string name="tacticalstock">Tactical Stock for M416, Vector</string>
    <string name="name">AWM</string>
    <string name="bullate">945 m/s</string>
    <string name="firing">Singal</string>
    <string name="impact">4000</string>
    <string name="magazine">5 rounds</string>
    <string name="extended">7 rounds</string>
    <string name="ready">500 ms</string>
    <string name="normal">4.2 second</string>
    <string name="quick">2.3 second</string>
    <string name="exquickmagdvss">Extended Mag (VSS)</string>
    <string-array name="Camp_Site_Facilities">
        <item>Sanhok</item>
        <item>Erangel</item>
        <item>Miramar</item>
        <item>Vikendi</item>
    </string-array>
</resources>