<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/all_background"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<TextView
    android:id="@+id/txt_sniper"
    android:layout_width="@dimen/_200dp"
    android:layout_height="@dimen/_40dp"
    android:layout_centerHorizontal="true"
    android:textColor="@color/white"
    android:gravity="center"
    android:textStyle="bold"
    android:textSize="@dimen/_20dp"
    android:fontFamily="@font/nexa_bold"
    android:text="@string/snipers"
    android:background="@drawable/textview_yellow_white"
    android:layout_marginTop="@dimen/_15dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_sniper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:padding="@dimen/_10dp"
            android:layout_below="@+id/txt_sniper"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>
        <RelativeLayout
            android:id="@+id/ads_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_below="@+id/recycler_view_sniper">
            <com.facebook.ads.NativeAdLayout
                android:id="@+id/native_ad_container"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_20dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
            <com.google.android.ads.nativetemplates.TemplateView
                android:visibility= "gone"
                android:id= "@+id/nativeTemplateView"
                app:gnt_template_type="@layout/gnt_small_template_view"
                android:layout_width= "match_parent"
                android:layout_height= "wrap_content" />
        </RelativeLayout>
        <TextView
            android:id="@+id/txt_dmr"
            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_40dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_below="@+id/ads_layout"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/dmr"
            android:background="@drawable/textview_yellow_white"
            android:layout_marginTop="@dimen/_15dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_dmr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:padding="@dimen/_10dp"
            android:layout_below="@+id/txt_dmr"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>
        <TextView
            android:id="@+id/txt_lmg"
            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_40dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_below="@+id/recycler_view_dmr"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/lmg"
            android:background="@drawable/textview_yellow_white"
            android:layout_marginTop="@dimen/_15dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_lmg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:padding="@dimen/_10dp"
            android:layout_below="@+id/txt_lmg"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>
        <TextView
        android:id="@+id/txt_ar"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_40dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_below="@+id/recycler_view_lmg"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/_20dp"
        android:fontFamily="@font/nexa_bold"
        android:text="@string/ar"
        android:background="@drawable/textview_yellow_white"
        android:layout_marginTop="@dimen/_15dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_ar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:padding="@dimen/_10dp"
            android:layout_below="@+id/txt_ar"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>
        <RelativeLayout
            android:id="@+id/ads_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_below="@+id/recycler_view_ar">
            <com.facebook.ads.NativeAdLayout
                android:id="@+id/native_ad_container1"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_20dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
            <com.google.android.ads.nativetemplates.TemplateView
                android:visibility= "gone"
                android:id= "@+id/nativeTemplateView1"
                app:gnt_template_type="@layout/gnt_small_template_view"
                android:layout_width= "match_parent"
                android:layout_height= "wrap_content" />
        </RelativeLayout>
        <TextView
            android:id="@+id/txt_smg"
            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_40dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_below="@+id/ads_layout1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/smg"
            android:background="@drawable/textview_yellow_white"
            android:layout_marginTop="@dimen/_15dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_smg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:padding="@dimen/_10dp"
            android:layout_below="@+id/txt_smg"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>
        <TextView
            android:id="@+id/txt_shotguns"
            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_40dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_below="@+id/recycler_view_smg"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/shotguns"
            android:background="@drawable/textview_yellow_white"
            android:layout_marginTop="@dimen/_15dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_shotguns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:padding="@dimen/_10dp"
            android:layout_below="@+id/txt_shotguns"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>
        <TextView
            android:id="@+id/txt_handguns"
            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_40dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_below="@+id/recycler_view_shotguns"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/handguns"
            android:background="@drawable/textview_yellow_white"
            android:layout_marginTop="@dimen/_15dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_handguns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:padding="@dimen/_10dp"
            android:layout_below="@+id/txt_handguns"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>
            <TextView
                android:id="@+id/txt_bows"
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_40dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:layout_below="@+id/recycler_view_handguns"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_20dp"
                android:fontFamily="@font/nexa_bold"
                android:text="@string/bows"
                android:background="@drawable/textview_yellow_white"
                android:layout_marginTop="@dimen/_15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_bows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:padding="@dimen/_10dp"
                android:layout_below="@+id/txt_bows"
                android:scrollbars="vertical">

            </androidx.recyclerview.widget.RecyclerView>
        <TextView
            android:id="@+id/txt_melle"
            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_40dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_below="@+id/recycler_view_bows"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/melle"
            android:background="@drawable/textview_yellow_white"
            android:layout_marginTop="@dimen/_15dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_melle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:padding="@dimen/_10dp"
            android:layout_below="@+id/txt_melle"
            android:scrollbars="vertical"/>
        <RelativeLayout
            android:id="@+id/ads_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_below="@+id/recycler_view_melle">
            <com.facebook.ads.NativeAdLayout
                android:id="@+id/native_ad_container2"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_20dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
            <com.google.android.ads.nativetemplates.TemplateView
                android:visibility= "gone"
                android:id= "@+id/nativeTemplateView2"
                app:gnt_template_type="@layout/gnt_small_template_view"
                android:layout_width= "match_parent"
                android:layout_height= "wrap_content" />
        </RelativeLayout>
        <TextView
            android:id="@+id/txt_throwabiles"
            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_40dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_below="@+id/ads_layout2"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/throwabiles"
            android:background="@drawable/textview_yellow_white"
            android:layout_marginTop="@dimen/_15dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_throwabiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:padding="@dimen/_10dp"
            android:layout_below="@+id/txt_throwabiles"
            android:scrollbars="vertical"/>
    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>