<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/all_background"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/transparent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_muzzle"
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_40dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_20dp"
                android:text="@string/muzzle"
                android:background="@drawable/textview_yellow_white"
                android:layout_marginTop="@dimen/_15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_muzzle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:padding="@dimen/_10dp"
                android:layout_below="@+id/txt_muzzle"
                android:scrollbars="vertical"/>
            <RelativeLayout
                android:id="@+id/ads_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_below="@+id/recycler_view_muzzle">
                <com.facebook.ads.NativeAdLayout
                    android:id="@+id/native_ad_container"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_20dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
                <com.google.android.ads.nativetemplates.TemplateView
                    android:visibility= "gone"
                    android:id= "@+id/nativeTemplateView"
                    app:gnt_template_type="@layout/gnt_small_template_view"
                    android:layout_width= "match_parent"
                    android:layout_height= "wrap_content" />
            </RelativeLayout>
            <TextView
                android:id="@+id/txt_lower"
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_40dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_below="@+id/ads_layout"
                android:textStyle="bold"
                android:textSize="@dimen/_20dp"
                android:text="@string/lowerrails"
                android:background="@drawable/textview_yellow_white"
                android:layout_marginTop="@dimen/_15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_lower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:padding="@dimen/_10dp"
                android:layout_below="@+id/txt_lower"
                android:scrollbars="vertical"/>
            <TextView
                android:id="@+id/txt_scopes"
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_40dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_below="@+id/recycler_view_lower"
                android:textStyle="bold"
                android:textSize="@dimen/_20dp"
                android:text="@string/scopes"
                android:background="@drawable/textview_yellow_white"
                android:layout_marginTop="@dimen/_15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_scopes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:padding="@dimen/_10dp"
                android:layout_below="@+id/txt_scopes"
                android:scrollbars="vertical"/>
            <RelativeLayout
                android:id="@+id/ads_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_below="@+id/recycler_view_scopes">
                <com.facebook.ads.NativeAdLayout
                    android:id="@+id/native_ad_container1"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_20dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
                <com.google.android.ads.nativetemplates.TemplateView
                    android:visibility= "gone"
                    android:id= "@+id/nativeTemplateView1"
                    app:gnt_template_type="@layout/gnt_small_template_view"
                    android:layout_width= "match_parent"
                    android:layout_height= "wrap_content" />
            </RelativeLayout>
            <TextView
                android:id="@+id/txt_magazines"
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_40dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_below="@+id/ads_layout1"
                android:textStyle="bold"
                android:textSize="@dimen/_20dp"
                android:text="@string/magazins"
                android:background="@drawable/textview_yellow_white"
                android:layout_marginTop="@dimen/_15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_magazines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:padding="@dimen/_10dp"
                android:layout_below="@+id/txt_magazines"
                android:scrollbars="vertical"/>
            <RelativeLayout
                android:id="@+id/ads_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_below="@+id/recycler_view_magazines">
                <com.facebook.ads.NativeAdLayout
                    android:id="@+id/native_ad_container2"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_20dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
                <com.google.android.ads.nativetemplates.TemplateView
                    android:visibility= "gone"
                    android:id= "@+id/nativeTemplateView2"
                    app:gnt_template_type="@layout/gnt_small_template_view"
                    android:layout_width= "match_parent"
                    android:layout_height= "wrap_content" />
            </RelativeLayout>
            <TextView
                android:id="@+id/txt_stocks"
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_40dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_below="@+id/ads_layout2"
                android:textStyle="bold"
                android:textSize="@dimen/_20dp"
                android:text="@string/stocks"
                android:background="@drawable/textview_yellow_white"
                android:layout_marginTop="@dimen/_15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_stocks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:padding="@dimen/_10dp"
                android:layout_below="@+id/txt_stocks"
                android:scrollbars="vertical"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>